--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme:
   title: Leonardo Rifeli
   image_home: https://leonardorifeli.com/img/website-avatar.png
   keywords: "joinville, back-end, php, developers brazil, developer, desenvolvedor araraquara, desenvolvedor web, conhecimento, engenharia de computação, engenharia, automação, programação, desenvolvimento, robotica, i.a, inteligencia artificial, dicas de desenvolvimento, dicas de engenharia, logatti, leonardo, leonardo rifeli, augusto rifeli, rifeli, Rifeli"
-  description: "teste"
+  description: "Meu nome é Leonardo Rifeli, tenho 20 anos e resido em Joinville (SC). Atuo há cerca de três anos no mercado Web, desde então venho adquirindo e aprimorando minhas experiências. Atuo como desenvolvedor back-end na agência taginterativa.com.br. Estou cursando bacharelado em Engenharia de Computação. Contribuo para projetos open source e para a comunidade web como um todo."
   autor: "Leonardo Rifeli"
   reply: "me@leonardorifeli.com"
   facebookTitle: Leonardo Rifeli
