--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ theme_settings:
   autor: "Leonardo Rifeli"
   reply: "leonardorifeli@gmail.com"
   facebookTitle: Leonardo Rifeli
-  facebookDescription: "My name is Leonardo Rifeli, I'm 20 years old and I live in Joinville (SC). I'm about three years in the Web market has since come acquiring and honing my experiences. I am currently a back-end developer at the agency taginterativa.com.br. I'm studying a BA in Computer Engineering. Contribute to open source projects and the web community as a whole."
+  facebookDescription: "My name is Leonardo Rifeli, I'm 21 years old and I live in Joinville (SC)."
 
   header_text: >
-     <p>Future engineer, back-end developer at <a href="https://contaazul.com/" target="_blank">ContaAzul</a> and a lifelong learner.</p>
+     <p>Future engineer, back-end developer at <a href="https://contaazul.com/" target="_blank">ContaAzul</a> and Associated Head of Engineering at <a href="https://reviewr.me/" target="_blank">reviewr.me</a>.</p>
 
      <p>"My job is to not be easy on people. My job is to make them better." (Steve Jobs).</p>
 
